yaml/hes-simulator.yaml
apiVersion: v1
kind: Service
metadata:
  name: hes-simulator-service
  namespace: default
spec:
  ports:
    - port: 9090
      targetPort: 9090
      name: api
  selector:
    app: hes-simulator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hes-simulator-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hes-simulator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hes-simulator
    spec:
      containers:
        - name: hes-simulator
          image: swensadocker/utility-data-simulator:latest
          ports:
            - containerPort: 9090
              name: api
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
