yaml/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: default
spec:
  ports:
    - port: 9092
      targetPort: 9092
      name: broker
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.0
          ports:
            - containerPort: 9092
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "500m"
          volumeMounts:
            - name: kafka-persistent-storage
              mountPath: /var/lib/kafka/data
      volumes:
        - name: kafka-persistent-storage
          persistentVolumeClaim:
            claimName: kafka-pv-claim
