yaml/mdm.yaml
apiVersion: v1
kind: Service
metadata:
  name: mdm-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8090
      targetPort: 8090
      name: api
    - port: 3002
      targetPort: 3002
      name: web
  selector:
    app: mdm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdm-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mdm
    spec:
      containers:
        - name: mdm-backend
          image: swensadocker/serveiz-mdm-backend:latest
          ports:
            - containerPort: 8090
              name: api
        - name: swensa-mdm-frontend 
          image: swensadocker/serveiz-mdm-frontend:latest
          ports:
             - containerPort: 3002 
               name: web
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 45
            periodSeconds: 10
