yaml/ubs.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubs-service
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: api
    - port: 3000
      targetPort: 3000
      name: web
  selector:
    app: ubs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubs-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ubs
    spec:
      containers:
        - name: ubs
          image: swensadocker/ubs-app:latest
          ports:
            - containerPort: 8080
              name: api
            - containerPort: 3000
              name: web
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
